--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,6 @@ options:
   provider: "openrouter"
   api_key: ""
   model: "anthropic/claude-3-5-sonnet"
-  custom_model: ""
   api_base: ""
   restrict_to_workspace: true
   workspace_path: "/share/nanobot_workspace"
@@ -24,8 +23,7 @@ options:
 schema:
   provider: list(openrouter,openai,anthropic,groq,deepseek,gemini,minimax,vllm,custom)
   api_key: str
-  model: list(anthropic/claude-3-5-sonnet,anthropic/claude-3-opus,anthropic/claude-3-haiku,openai/gpt-4o,openai/gpt-4o-mini,openai/gpt-4-turbo,google/gemini-pro-1.5,google/gemini-flash-1.5,deepseek/deepseek-chat,deepseek/deepseek-coder,meta-llama/llama-3.1-70b-instruct,meta-llama/llama-3.1-405b-instruct,mistralai/mistral-large,qwen/qwen-2.5-72b-instruct)
-  custom_model: str?
+  model: str
   api_base: str?
   restrict_to_workspace: bool
   workspace_path: str
