--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: "Nanobot AI"
 description: "Ultra-Lightweight AI Agent (Gateway Mode). Supports MCP, Telegram & Email."
-version: "0.1.12"
+version: "0.1.13"
 slug: "nanobot"
 url: "https://github.com/dartanidi/ha-nanobot"
 arch:
@@ -13,44 +13,35 @@ map:
 ports:
   18790/tcp: 18790
 options:
-  # Core Config
   provider: "openrouter"
   api_key: ""
   model: "anthropic/claude-3-5-sonnet"
   api_base: ""
   restrict_to_workspace: true
   workspace_path: "/share/nanobot_workspace"
+  media_path: "/share/nanobot_workspace/media"
   additional_config_json: "{}"
-  
-  # Telegram Config
   telegram_enabled: false
   telegram_token: ""
   telegram_allow_user: ""
-
-  # Email Config
   email_enabled: false
   email_username: ""
   email_password: ""
   email_allow_from: ""
   email_imap_server: "imap.gmail.com"
   email_smtp_server: "smtp.gmail.com"
-
 schema:
-  # Core Schema
   provider: str
   api_key: str
   model: str
   api_base: str?
   restrict_to_workspace: bool
   workspace_path: str
+  media_path: str
   additional_config_json: str
-
-  # Telegram Schema
   telegram_enabled: bool
   telegram_token: str?
   telegram_allow_user: str?
-
-  # Email Schema
   email_enabled: bool
   email_username: str?
   email_password: password?
