--- a/config.yaml
+++ b/config.yaml
@@ -1,50 +1,36 @@
 name: "Nanobot AI"
 description: "Ultra-Lightweight AI Agent (Gateway Mode). Supports MCP, Telegram & Email."
-version: "0.2.04"
+version: "0.2.05"
 slug: "nanobot"
-url: "https://github.com/dartanidi/ha-nanobot"
+init: false
 arch:
   - aarch64
   - amd64
-init: false
+  - armhf
+  - armv7
 map:
-  - config:rw
   - share:rw
-ports:
-  18790/tcp: 18790
+
 options:
-  provider: "openrouter"
-  api_key: ""
-  model: "anthropic/claude-3-5-sonnet"
-  api_base: ""
-  restrict_to_workspace: true
   workspace_path: "/share/nanobot_workspace"
   media_path: "/share/nanobot_workspace/media"
-  additional_config_json: "{}"
-  telegram_enabled: false
+  provider: "openai"
+  api_key: ""
+  api_base: ""
+  model: "gpt-4o"
+  additional_config_json: '{"tools": {"builtin": ["document_viewer", "image_viewer", "ls", "exec", "read_file"]}}'
+  telegram_enabled: true
   telegram_token: ""
   telegram_allow_user: ""
-  email_enabled: false
-  email_username: ""
-  email_password: ""
-  email_allow_from: ""
-  email_imap_server: "imap.gmail.com"
-  email_smtp_server: "smtp.gmail.com"
+
 schema:
-  provider: str
-  api_key: str
-  model: str
-  api_base: str?
-  restrict_to_workspace: bool
   workspace_path: str
   media_path: str
+  provider: str
+  api_key: password
+  api_base: str?
+  model: str
   additional_config_json: str
   telegram_enabled: bool
-  telegram_token: str?
+  telegram_token: password?
   telegram_allow_user: str?
-  email_enabled: bool
-  email_username: str?
-  email_password: password?
-  email_allow_from: str?
-  email_imap_server: str?
-  email_smtp_server: str?
