--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 name: "Nanobot AI"
-description: "Ultra-Lightweight AI Agent. Supports MCP, Telegram, Custom Skills & Fallback Routing."
+description: "Ultra-Lightweight AI Agent for Home Assistant. Supports MCP, Telegram & Custom Skills."
 version: "0.4.0"
 slug: "nanobot"
 init: false
@@ -9,16 +9,12 @@ map:
   - share:rw
 
 options:
-  workspace_path: "/share/nanobot"
+  workspace_path: "/share/nanobot_workspace"
   restrict_to_workspace: true
   provider: "openrouter"
   api_key: ""
   api_base: ""
   model: "deepseek/deepseek-r1"
-  fallback_enabled: false
-  fallback_provider: "groq"
-  fallback_api_key: ""
-  fallback_model: "llama-3.3-70b-versatile"
   additional_config_json: "{}"
   telegram_enabled: true
   telegram_token: ""
@@ -31,10 +27,6 @@ schema:
   api_key: password
   api_base: str?
   model: str
-  fallback_enabled: bool
-  fallback_provider: str?
-  fallback_api_key: password?
-  fallback_model: str?
   additional_config_json: str?
   telegram_enabled: bool
   telegram_token: password?
