--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,7 @@ options:
   fallback_provider: "openai"
   fallback_api_key: ""
   fallback_model: "openai/gpt-4o-mini"
-  additional_config: {}
+  additional_config_json: "{}"
   telegram_enabled: true
   telegram_token: ""
   telegram_allow_user: ""
@@ -35,7 +35,7 @@ schema:
   fallback_provider: str?
   fallback_api_key: password?
   fallback_model: str?
-  additional_config: dict
+  additional_config_json: str?
   telegram_enabled: bool
   telegram_token: password?
   telegram_allow_user: str?
